plang/testing/logs/false-incorrect/164/program164.p.p
mZc (A) SHRoI :- (t (J) As5 VHR7 U, m, o8J DFp HFskd (ifFm (ww M1jGg (lpID (SXsyH) tH0m nOJ) (syOb I1G) HcCC) JSxlz hY85 (I35VS)) reQ, ozbCE N); wF6 (OQT) (gMwxM (wZlSi (dGyY))) (nZ aB htz Sd7 D8c) n, (((gwteo Hu9JZ (nR) (I5FTZ))); (aqsv (mS (qlfgj)) (jJ ehO)), (vEmt (ACA))).
m cutsA.

oVab2 (vO3 (g zbH (f77IC (wlWxI (b0FQz (tc) (kDs (gY7 jA (J) X E) (WLOaB))) uKS kr)) (kOMLr qxHR))) (QlorG) JkX6 q :- ((e (MdSQ))), (((c6wOZ ORwWI))); y5 (gsQA rIJ (Vm) wlaS) NgCGl H (Z0gdD); pj GtL; oI (e) R4W Ohra kv.
n467 (I4h) (Pju7) s0Wf pc.


fXWUC (nhF K3g YQU (RD8) (t XN)) :- (h (B), (x3 (QjXuu) gn (ba (WxAY) xDIsz) gH), (nX (C)); hkW3; kC F4QsK pk B (MNI)).
xuyEP (u (J63)) :- (a (tsst6 (SBWld) (J23z) (f) QgAv) (NttZw), (hkT (q WA (am Xe xV))); uy Bu4Ko (Q), uQ7N (NSv) (AT3w) (IVWS) (MTeQ)), (elNL OcYbo if7J, eFbJ (MMh) (BHO) ftTI, yjS OJ71 razS TfOt (m3 (r4Nh QKtx) IQNaK RSJ)); lac, p9Qho (X) k3; k6 y I h Q, x80ZS aXgB; (yV); wi1r (hah (Wm) (TfH)) (jtiPo kQv (qqs9 (XJrA) (e) S7xm OaXI8) (Mk)) U.


aM (Ky) (R) mIn :- (s P2b5 (Gb4) k (z E (qDvqN J2k XRi X3oEY MX) (D))), y (ygxg Yqv) (BTO); hL tTxZ9; vZlDx (YP9oE), ((e)); rG bI (mIxW X (iFwTu (AZi) P9CZM CpUo WWDF)).
? (eAeW; ((b5G qx6B))); ((d (JJHla) WX (XFze7))).
